--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -15,6 +15,12 @@
     },
     "dependencies": {
         "@icon-park/vue-next": "^1.4.2",
+        "@tiptap/core": "^3.10.7",
+        "@tiptap/extension-image": "^3.10.7",
+        "@tiptap/pm": "^3.10.7",
+        "@tiptap/starter-kit": "^3.10.7",
+        "@tiptap/vue-3": "^3.10.7",
+        "nanoid": "^5.1.6",
         "pinia": "^3.0.3",
         "smooth-dnd": "^0.12.1",
         "vue": "^3.5.22",
