--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -20,10 +20,12 @@
         "@tiptap/pm": "^3.10.7",
         "@tiptap/starter-kit": "^3.10.7",
         "@tiptap/vue-3": "^3.10.7",
+        "echarts": "^6.0.0",
         "nanoid": "^5.1.6",
         "pinia": "^3.0.3",
         "smooth-dnd": "^0.12.1",
         "vue": "^3.5.22",
+        "vue-echarts": "^8.0.1",
         "vue-router": "^4.6.3"
     },
     "devDependencies": {
